--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -28,6 +28,7 @@
       "disablecdsfileandlargeimage": false,
       "dynamicschema": false,
       "enableappembeddingux": false,
+      "enablecommandbar": false,
       "enablecomponentnamemaps": false,
       "enablecomponentscopeoldbehavior": false,
       "enableeditcacherefreshfrequency": false,
@@ -44,6 +45,7 @@
       "enhanceddelegation": true,
       "enhancedgalleryinitialization": true,
       "errorhandling": false,
+      "excelcompatibility": false,
       "expandedsavedatasupport": true,
       "exportimportcomponents2": true,
       "externalmessage": false,
@@ -104,7 +106,7 @@
   },
   "ScreenOrder": [
     "SendButton",
-    "Template",
-    "Home"
+    "Home",
+    "CreateTemplate"
   ]
 }
