--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -107,6 +107,7 @@
   "ScreenOrder": [
     "SendButton",
     "Home",
-    "CreateTemplate"
+    "CreateTemplate",
+    "CreateNewCampaign"
   ]
 }
