--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -4,36 +4,37 @@ Form As screen:
         DataSource: =Table1
         Height: =657
         NumberOfColumns: =1
-        X: =279
+        Width: =956
+        X: =224
         Y: =108
         ZIndex: =1
 
-        Title_DataCard1 As typedDataCard.textualEditCard:
+        Title1_DataCard1 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
-            DataField: ="Title"
-            Default: =ThisItem.Title
+            DataField: ="Title1"
+            Default: =ThisItem.Title1
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@Table1],DataSourceInfo.DisplayName,"Title")
+            DisplayName: =DataSourceInfo([@Table1],DataSourceInfo.DisplayName,"Title1")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
-            MaxLength: =DataSourceInfo([@Table1], DataSourceInfo.MaxLength, "Title")
+            MaxLength: =DataSourceInfo([@Table1], DataSourceInfo.MaxLength, "Title1")
             Required: =false
-            Update: =DataCardValue1.Text
-            Width: =800
+            Update: =DataCardValue11.Text
+            Width: =956
             X: =0
             Y: =0
             ZIndex: =1
 
-            DataCardKey1 As label:
-                Height: =39
+            DataCardKey11 As label:
+                Height: =34
                 Text: =Parent.DisplayName
-                Width: =108
+                Width: =61
                 Wrap: =false
                 X: =30
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue1 As text:
+            DataCardValue11 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 Default: =Parent.Default
                 DelayOutput: =true
@@ -45,12 +46,12 @@ Form As screen:
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
-                Width: =704
-                X: =95
-                Y: =10
+                Width: =690
+                X: =106
+                Y: =4
                 ZIndex: =2
 
-            ErrorMessage1 As label:
+            ErrorMessage11 As label:
                 AutoHeight: =true
                 Height: =10
                 Live: =Live.Assertive
@@ -62,17 +63,84 @@ Form As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue1.Y + DataCardValue1.Height
+                Y: =DataCardValue11.Y + DataCardValue11.Height
                 ZIndex: =3
 
-            StarVisible1 As label:
+            StarVisible11 As label:
                 Align: =Align.Center
-                Height: =DataCardKey1.Height
+                Height: =DataCardKey11.Height
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey1.Y
+                Y: =DataCardKey11.Y
+                ZIndex: =4
+
+        Title2_DataCard1 As typedDataCard.textualEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Title2"
+            Default: =ThisItem.Title2
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@Table1],DataSourceInfo.DisplayName,"Title2")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@Table1], DataSourceInfo.MaxLength, "Title2")
+            Required: =false
+            Update: =DataCardValue12.Text
+            Width: =956
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            DataCardKey12 As label:
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =74
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue12 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Tooltip: =Parent.DisplayName
+                Width: =694
+                X: =104
+                Y: =4
+                ZIndex: =2
+
+            ErrorMessage12 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue12.Y + DataCardValue12.Height
+                ZIndex: =3
+
+            StarVisible12 As label:
+                Align: =Align.Center
+                Height: =DataCardKey12.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey12.Y
                 ZIndex: =4
 
         Subject_DataCard1 As typedDataCard.textualEditCard:
@@ -86,9 +154,10 @@ Form As screen:
             MaxLength: =DataSourceInfo([@Table1], DataSourceInfo.MaxLength, "Subject")
             Required: =false
             Update: =DataCardValue2.Text
-            Width: =800
+            Visible: =varTabSelected=1
+            Width: =956
             X: =0
-            Y: =1
+            Y: =2
             ZIndex: =1
 
             DataCardKey2 As label:
@@ -153,9 +222,10 @@ Form As screen:
             Height: =60
             Required: =false
             Update: =DataCardValue6.Selected.Value
-            Width: =800
+            Visible: =varTabSelected=1
+            Width: =956
             X: =0
-            Y: =2
+            Y: =3
             ZIndex: =1
 
             DataCardKey6 As label:
@@ -214,9 +284,10 @@ Form As screen:
             Height: =60
             Required: =false
             Update: =DataCardValue7.Selected.Value
-            Width: =800
+            Visible: =varTabSelected=1
+            Width: =956
             X: =0
-            Y: =3
+            Y: =4
             ZIndex: =1
 
             DataCardKey7 As label:
@@ -274,9 +345,10 @@ Form As screen:
             Height: =249
             Required: =false
             Update: =DataCardValue8.HtmlText
-            Width: =800
+            Visible: =varTabSelected=1
+            Width: =956
             X: =0
-            Y: =4
+            Y: =5
             ZIndex: =1
 
             DataCardKey8 As label:
@@ -331,9 +403,10 @@ Form As screen:
             Height: =295
             Required: =false
             Update: =DataCardValue10.HtmlText
-            Width: =800
+            Visible: =varTabSelected=2
+            Width: =956
             X: =0
-            Y: =5
+            Y: =6
             ZIndex: =1
 
             DataCardKey10 As label:
