--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -467,14 +467,18 @@ Form As screen:
 
         Button10_1 As button:
             BorderThickness: =0
-            Color: =
-            DisabledBorderColor: =Self.Fill
+            Color: |-
+                =If(varTabSelected = ThisItem.ID, White, ColorValue("#A6A6A6"))
+            DisabledBorderColor: =DimGrey
             DisabledColor: =RGBA(255, 255, 255, 1)
+            DisabledFill: |-
+                =ColorValue("#F4F4F4")
             Fill: |-
-                =ColorValue("#0078D4")
+                =If(varTabSelected = ThisItem.ID, ColorValue("#0078D4"), ColorValue("#F4F4F4"))
             Height: =42
+            HoverFill: =If(varTabSelected = ThisItem.ID, ColorFade(RGBA(0, 120, 212, 1), -20%), ColorFade(RGBA(244, 244, 244, 1), -20%))
             OnSelect: =Set(varTabSelected, ThisItem.ID)
-            PressedBorderColor: =RGBA(166, 166, 166, 1)
+            PressedBorderColor: =RGBA(0, 134, 208, 1)
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
             RadiusTopLeft: =0
