--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -1,4 +1,5 @@
 Form As screen:
+    Fill: =
 
     Form2 As form:
         DataSource: =Table1
@@ -469,16 +470,20 @@ Form As screen:
             BorderThickness: =0
             Color: |-
                 =If(varTabSelected = ThisItem.ID, White, ColorValue("#A6A6A6"))
-            DisabledBorderColor: =DimGrey
+            DisabledBorderColor: =
             DisabledColor: =RGBA(255, 255, 255, 1)
             DisabledFill: |-
                 =ColorValue("#F4F4F4")
             Fill: |-
                 =If(varTabSelected = ThisItem.ID, ColorValue("#0078D4"), ColorValue("#F4F4F4"))
+            FocusedBorderColor: =
+            FocusedBorderThickness: =
             Height: =42
+            HoverBorderColor: =
+            HoverColor: =White
             HoverFill: =If(varTabSelected = ThisItem.ID, ColorFade(RGBA(0, 120, 212, 1), -20%), ColorFade(RGBA(244, 244, 244, 1), -20%))
             OnSelect: =Set(varTabSelected, ThisItem.ID)
-            PressedBorderColor: =RGBA(0, 134, 208, 1)
+            PressedBorderColor: =
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
             RadiusTopLeft: =0
