--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -11,6 +11,7 @@ Form As screen:
         ZIndex: =1
 
         Title1_DataCard1 As typedDataCard.textualEditCard:
+            BorderColor: =RGBA(179, 179, 179, 1)
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title1"
             Default: =ThisItem.Title1
@@ -38,11 +39,17 @@ Form As screen:
 
             DataCardValue11 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                BorderThickness: =1
                 Default: =Parent.Default
                 DelayOutput: =true
+                DisabledFill: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                FocusedBorderThickness: =1
+                HoverBorderColor: =RGBA(166, 166, 166, 1)
+                HoverFill: =RGBA(255, 255, 255, 1)
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
+                PressedBorderColor: =RGBA(166, 166, 166, 1)
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
                 RadiusTopLeft: =0
@@ -147,6 +154,7 @@ Form As screen:
                 ZIndex: =4
 
         Subject_DataCard1 As typedDataCard.textualEditCard:
+            BorderColor: =RGBA(179, 179, 179, 1)
             BorderStyle: =BorderStyle.Solid
             DataField: ="Subject"
             Default: =ThisItem.Subject
@@ -174,11 +182,17 @@ Form As screen:
 
             DataCardValue2 As text:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                BorderThickness: =1
                 Default: =Parent.Default
                 DelayOutput: =true
+                DisabledFill: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                FocusedBorderThickness: =1
+                HoverBorderColor: =RGBA(166, 166, 166, 1)
+                HoverFill: =RGBA(255, 255, 255, 1)
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
+                PressedBorderColor: =RGBA(166, 166, 166, 1)
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
                 RadiusTopLeft: =0
@@ -216,6 +230,7 @@ Form As screen:
 
         Template_DataCard2 As typedDataCard.allowedValuesStringEditCard:
             AllowedValues: =DataSourceInfo([@Table1], DataSourceInfo.AllowedValues, "Template")
+            BorderColor: =RGBA(179, 179, 179, 1)
             BorderStyle: =BorderStyle.Solid
             DataField: ="Template"
             Default: =ThisItem.Template
@@ -242,9 +257,19 @@ Form As screen:
 
             DataCardValue6 As dropdown:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                BorderThickness: =1
+                ChevronBackground: =RGBA(179, 179, 179, 1)
+                ChevronHoverBackground: =ColorFade(RGBA(166, 166, 166, 1), -20%)
                 Default: =Parent.Default
+                DisabledFill: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                FocusedBorderThickness: =1
+                HoverBorderColor: =RGBA(166, 166, 166, 1)
+                HoverFill: =RGBA(255, 255, 255, 1)
                 Items: =Parent.AllowedValues
+                PressedBorderColor: =RGBA(166, 166, 166, 1)
+                PressedFill: =RGBA(255, 255, 255, 1)
+                SelectionFill: =RGBA(255, 255, 255, 1)
                 Tooltip: =Parent.DisplayName
                 Width: =651
                 X: =148
@@ -278,6 +303,7 @@ Form As screen:
 
         "'Upload File_DataCard2' As typedDataCard.allowedValuesStringEditCard":
             AllowedValues: =DataSourceInfo([@Table1], DataSourceInfo.AllowedValues, "Upload_x0020_File")
+            BorderColor: =RGBA(179, 179, 179, 1)
             BorderStyle: =BorderStyle.Solid
             DataField: ="Upload_x0020_File"
             Default: =ThisItem.'Upload File'
@@ -304,9 +330,20 @@ Form As screen:
 
             DataCardValue7 As dropdown:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                BorderThickness: =1
+                ChevronBackground: =RGBA(179, 179, 179, 1)
+                ChevronDisabledBackground: =RGBA(255, 255, 255, 1)
+                ChevronHoverBackground: =ColorFade(RGBA(166, 166, 166, 1), -20%)
                 Default: =Parent.Default
+                DisabledBorderColor: =RGBA(255, 255, 255, 1)
+                DisabledColor: =RGBA(255, 255, 255, 1)
+                DisabledFill: =RGBA(255, 255, 255, 1)
                 DisplayMode: =Parent.DisplayMode
+                FocusedBorderThickness: =1
+                HoverFill: =RGBA(255, 255, 255, 1)
                 Items: =Parent.AllowedValues
+                PressedFill: =RGBA(255, 255, 255, 1)
+                SelectionFill: =RGBA(255, 255, 255, 1)
                 Tooltip: =Parent.DisplayName
                 Width: =633
                 X: =167
