--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -3,6 +3,7 @@ Form As screen:
 
     Form2 As form:
         DataSource: =Table1
+        DefaultMode: =FormMode.New
         Height: =657
         NumberOfColumns: =1
         Width: =956
