--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -86,6 +86,98 @@ Form As screen:
                 Y: =DataCardKey11.Y
                 ZIndex: =4
 
+        "'Upload File_DataCard1' As typedDataCard.textualEditCard":
+            BorderColor: =RGBA(179, 179, 179, 1)
+            BorderStyle: =BorderStyle.Solid
+            BorderThickness: =0
+            DataField: ="Upload_x0020_File"
+            Default: =ThisItem.'Upload File'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@Table1],DataSourceInfo.DisplayName,"Upload_x0020_File")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@Table1], DataSourceInfo.MaxLength, "Upload_x0020_File")
+            Required: =false
+            Update: =DataCardValue1.Text
+            Width: =956
+            X: =0
+            Y: =1
+            ZIndex: =1
+
+            DataCardKey1 As label:
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =117
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue1 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                BorderThickness: =1
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisabledFill: =RGBA(255, 255, 255, 1)
+                DisplayMode: =Parent.DisplayMode
+                FocusedBorderThickness: =2
+                HoverBorderColor: =RGBA(179, 179, 179, 1)
+                HoverFill: =RGBA(255, 255, 255, 1)
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Tooltip: =Parent.DisplayName
+                Width: =651
+                X: =147
+                Y: =7
+                ZIndex: =2
+
+            ErrorMessage1 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue1.Y + DataCardValue1.Height
+                ZIndex: =3
+
+            StarVisible1 As label:
+                Align: =Align.Center
+                Height: =DataCardKey1.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey1.Y
+                ZIndex: =4
+
+            Button6 As button:
+                BorderThickness: =0
+                Fill: =RGBA(0, 120, 212, 1)
+                FocusedBorderThickness: =0
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Text: ="Upload"
+                Width: =89
+                X: =798
+                Y: =7
+                ZIndex: =5
+
         Title2_DataCard1 As typedDataCard.textualEditCard:
             BorderColor: =RGBA(179, 179, 179, 1)
             BorderStyle: =BorderStyle.Solid
@@ -101,7 +193,7 @@ Form As screen:
             Visible: =varTabSelected=2
             Width: =956
             X: =0
-            Y: =1
+            Y: =2
             ZIndex: =1
 
             DataCardKey12 As label:
@@ -170,7 +262,7 @@ Form As screen:
             Visible: =varTabSelected=1
             Width: =956
             X: =0
-            Y: =2
+            Y: =3
             ZIndex: =1
 
             DataCardKey2 As label:
@@ -245,7 +337,7 @@ Form As screen:
             Visible: =varTabSelected=1
             Width: =956
             X: =0
-            Y: =3
+            Y: =4
             ZIndex: =1
 
             DataCardKey6 As label:
@@ -301,80 +393,6 @@ Form As screen:
                 Width: =30
                 Wrap: =false
                 Y: =DataCardKey6.Y
-                ZIndex: =4
-
-        "'Upload File_DataCard2' As typedDataCard.allowedValuesStringEditCard":
-            AllowedValues: =DataSourceInfo([@Table1], DataSourceInfo.AllowedValues, "Upload_x0020_File")
-            BorderColor: =RGBA(179, 179, 179, 1)
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Upload_x0020_File"
-            Default: =ThisItem.'Upload File'
-            DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@Table1],DataSourceInfo.DisplayName,"Upload_x0020_File")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =60
-            Required: =false
-            Update: =DataCardValue7.Selected.Value
-            Visible: =varTabSelected=1
-            Width: =956
-            X: =0
-            Y: =4
-            ZIndex: =1
-
-            DataCardKey7 As label:
-                Height: =34
-                Text: =Parent.DisplayName
-                Width: =121
-                Wrap: =false
-                X: =30
-                Y: =10
-                ZIndex: =1
-
-            DataCardValue7 As dropdown:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                BorderThickness: =1
-                ChevronBackground: =RGBA(179, 179, 179, 1)
-                ChevronDisabledBackground: =RGBA(255, 255, 255, 1)
-                ChevronHoverBackground: =ColorFade(RGBA(166, 166, 166, 1), -20%)
-                Default: =Parent.Default
-                DisabledBorderColor: =RGBA(255, 255, 255, 1)
-                DisabledColor: =RGBA(255, 255, 255, 1)
-                DisabledFill: =RGBA(255, 255, 255, 1)
-                DisplayMode: =Parent.DisplayMode
-                FocusedBorderThickness: =1
-                HoverFill: =RGBA(255, 255, 255, 1)
-                Items: =Parent.AllowedValues
-                PressedFill: =RGBA(255, 255, 255, 1)
-                SelectionFill: =RGBA(255, 255, 255, 1)
-                Tooltip: =Parent.DisplayName
-                Width: =633
-                X: =167
-                Y: =4
-                ZIndex: =2
-
-            ErrorMessage7 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue7.Y + DataCardValue7.Height
-                ZIndex: =3
-
-            StarVisible7 As label:
-                Align: =Align.Center
-                Height: =DataCardKey7.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey7.Y
                 ZIndex: =4
 
         Message_DataCard2 As typedDataCard.richTextEditorEditCard:
@@ -535,4 +553,40 @@ Form As screen:
             X: =4
             Y: =3
             ZIndex: =1
+
+    Button6_1 As button:
+        BorderThickness: =0
+        Fill: =RGBA(0, 120, 212, 1)
+        FocusedBorderThickness: =0
+        PaddingBottom: =0
+        PaddingLeft: =0
+        PaddingRight: =0
+        PaddingTop: =0
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Test"
+        Width: =89
+        X: =832
+        Y: =665
+        ZIndex: =3
+
+    Button6_2 As button:
+        BorderThickness: =0
+        Fill: =RGBA(0, 120, 212, 1)
+        FocusedBorderThickness: =0
+        PaddingBottom: =0
+        PaddingLeft: =0
+        PaddingRight: =0
+        PaddingTop: =0
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Send"
+        Width: =89
+        X: =936
+        Y: =665
+        ZIndex: =4
 
