--- a/app/Src/Form.fx.yaml
+++ b/app/Src/Form.fx.yaml
@@ -590,3 +590,22 @@ Form As screen:
         Y: =665
         ZIndex: =4
 
+    Rectangle3 As rectangle:
+        Fill: =RGBA(109, 49, 162, 1)
+        Height: =342
+        Width: =657
+        X: =80
+        Y: =404
+        ZIndex: =5
+
+    Label4 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =260
+        Size: =48
+        Text: ="TEST"
+        Width: =161
+        X: =317
+        Y: =462
+        ZIndex: =6
+
