--- a/app/Src/Home.fx.yaml
+++ b/app/Src/Home.fx.yaml
@@ -81,7 +81,7 @@ Home As screen:
             AccessibleLabel: =Self.Tooltip
             Height: =60
             Icon: =Icon.ChevronRight
-            OnSelect: =Select(Parent)
+            OnSelect: =Navigate(CampaignScreen);
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
